--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
-Hi!
- urgens.de
+<html>
+    <head>
+        <title>urgens.de</title>
+    </head>
+    <body>
+        <header>
+            Hi!
+        </header>
+        <content>
+            
+        </content>
+        <footer>
+            urgens.de
+        </footer>
+    </body>
+</html>
