--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <html>
     <head>
+        <!-- Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147573427-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'UA-147573427-1');
+        </script>
+        <!-- /Google Analytics -->
         <title>urgens.de</title>
     </head>
     <body>
